...
                                            <outlet property="nameLabel" destination="qpB-4v-TOb" id="yBG-gz-fdF"/>
                                            <segue destination="6FA-rM-b1D" kind="show" id="IZu-ZC-aed"/>
                                        </connections>
                                    </tableViewCell>
                                </prototypes>
                            </tableView>
                            <searchBar contentMode="redraw" placeholder="Search..." showsCancelButton="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bhQ-L0-gxt">
                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                <color key="tintColor" red="0.83921568627450982" green="0.0" blue="0.098039215686274508" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <color key="barTintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" keyboardAppearance="alert" returnKeyType="done"/>
                            </searchBar>
                        </subviews>
...
                                        <rect key="frame" x="0.0" y="17" width="126" height="219"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                            <rect key="frame" x="0.0" y="0.0" width="126" height="219"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAuto
                                                    <rect key="frame" x="0.0" y="145" width="126" height="74"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="SmallReferenceName">
                                                        <accessibilityTraits key="traits" staticText="YES" notEnabled="YES"/>
                                                    </accessibility>
                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
...
                                                        <accessibilityTraits key="traits" staticText="YES" notEnabled="YES"/>
                                                    </accessibility>
                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                                    <color key="textColor" red="0.2627450980392157" green="0.27450980392156865" blue="0.28627450980392155" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" minimumScaleFactor="0.599999999999999
                                                    <rect key="frame" x="8" y="385" width="294" height="23"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="CrossReferenceName">
                                                        <accessibilityTraits key="traits" staticText="YES" notEnabled="YES"/>
                                                    </accessibility>
                                                    <constraints>
                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="23" id="oau-7E-Ja3"/>
...
