...
            .drive(onNext: { [weak self] (_) in
                _ = self?.navigationController?.popViewController(animated: true)
                }, onCompleted: nil, onDisposed: nil).disposed(by: disposeBag)

        loadingMore = false

        tableView.accessibilityIdentifier = "SearchCharacterList"

    }

    fileprivate func setLayoutForKeyboard() {

        NotificationCenter.default
...
